--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                     <span class="bar3"></span>
                 </div>
             </nav>
+
+            <div class="max-w-547 pt-261">
+                <h1 class="m-0 font-poppins fw-normal line-height-86 fs-6xl text-white">Vitae nunc,<sapn class="fw-bold"> blandit a odio</sapn></h1>
+                <h6 class="m-0 pt-27 font-poppins line-height-41 fw-medium fs-xl opacity-7 text-white pb-46">Semper in egestas risus id tempus. Pellentesque dolor eros sollicitudin feugiat ut odio semper. Mattis fermentum eget ut vestibulum dolor diam</h6>
+                <button class="font-poppins fw-medium fs-3xl line-height-37 color-blue bg-white btn-1 duration-300">Get Started</button>
+            </div>
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
