--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="position-relative min-vh-100 bg-img">
+    <section class="position-relative min-vh-100 bg-img d-none">
         <div class="container max-w-1326 ">
             <nav class="d-flex justify-content-between align-items-center pt-26">
                 <div class="logo">
@@ -34,11 +34,36 @@
                 </div>
             </nav>
 
-            <div class="max-w-547 pt-261">
+            <div class="max-w-547 pt-">
                 <h1 class="m-0 font-poppins fw-normal line-height-86 fs-6xl text-white">Vitae nunc,<sapn class="fw-bold"> blandit a odio</sapn></h1>
                 <h6 class="m-0 pt-27 font-poppins line-height-41 fw-medium fs-xl opacity-7 text-white pb-46">Semper in egestas risus id tempus. Pellentesque dolor eros sollicitudin feugiat ut odio semper. Mattis fermentum eget ut vestibulum dolor diam</h6>
                 <button class="font-poppins fw-medium fs-3xl line-height-37 color-blue bg-white btn-1 duration-300">Get Started</button>
             </div>
+        </div>
+    </section>
+    <section class="bg-color">
+        <div class="container max-w-1326 ">
+            <div class="row pt-26 align-items-end">
+                <div class="col-6">
+                    <div class="pb-10">
+                        <img src="./assets/img/a87.gif" alt="" class="w-100 ">
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="">
+                        <h2 class="m-0 font-poppins fw-semibold line-height-68 fs-5xl text-white">Mint Your Bat</h2>
+                        <h4 class="m-0 font-poppins line-height-40 fs-4xl pt-5 text-white">Minting: 1,5 SOL</h4>
+                        <h5 class="m-0 font-poppins opacity-50 text-white fw-normal line-height-21 fs-md text-decoration-line-through">Before 2 SOL</h5>
+                        <h4 class="m-0 font-poppins line-height-40 fs-4xl pt-5 text-white pt-21">Whitelist: 0,88 SOL</h4>
+                        <h5 class="m-0 font-poppins opacity-50 text-white fw-normal line-height-21 fs-md text-decoration-line-through pb-63">Before 1 SOL</h5>
+                        <button class="color-blue font-poppins line-height-24 fw-medium fs-md btn-2 duration-300">Coming soon</button>
+                        <div class="">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
