--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="row pt-26 align-items-end">
                 <div class="col-6">
                     <div class="pb-10">
-                        <img src="./assets/img/a87.gif" alt="" class="w-100 ">
+                        <!-- <img src="./assets/img/a87.gif" alt="" class="w-100 "> -->
                     </div>
                 </div>
                 <div class="col-6">
@@ -57,8 +57,10 @@
                         <h4 class="m-0 font-poppins line-height-40 fs-4xl pt-5 text-white pt-21">Whitelist: 0,88 SOL</h4>
                         <h5 class="m-0 font-poppins opacity-50 text-white fw-normal line-height-21 fs-md text-decoration-line-through pb-63">Before 1 SOL</h5>
                         <button class="color-blue font-poppins line-height-24 fw-medium fs-md btn-2 duration-300">Coming soon</button>
-                        <div class="">
-                            
+                        <div class="gap-23 d-flex pt-52">
+                            <a href="" class="media-link duration-300"><img src="./assets/img/svg/instagram.svg" alt=""></a>
+                            <a href="" class="media-link duration-300"><img src="./assets/img/svg/twitter.svg" alt=""></a>
+                            <a href="" class="media-link duration-300"><img src="./assets/img/svg/discord.svg" alt=""></a>
                         </div>
                     </div>
                 </div>
