add media link and hover

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                         <h5 class="m-0 font-poppins opacity-50 text-white fw-normal line-height-21 fs-md text-decoration-line-through pb-63">Before 1 SOL</h5>
                         <button class="color-blue font-poppins line-height-24 fw-medium fs-md btn-2 duration-300">Coming soon</button>
                         <div class="gap-23 d-flex pt-52">
-                            <a href="" class="media-link duration-300"><img src="./assets/img/svg/instagram.svg" alt=""></a>
-                            <a href="" class="media-link duration-300"><img src="./assets/img/svg/twitter.svg" alt=""></a>
-                            <a href="" class="media-link duration-300"><img src="./assets/img/svg/discord.svg" alt=""></a>
+                            <a href="https://www.instagram.com/" target="_blank" class="media-link duration-300"><img src="./assets/img/svg/instagram.svg" alt=""></a>
+                            <a href="https://twitter.com/?lang=en" target="_blank" class="media-link duration-300"><img src="./assets/img/svg/twitter.svg" alt=""></a>
+                            <a href="https://discord.com/download" target="_blank" class="media-link duration-300"><img src="./assets/img/svg/discord.svg" alt=""></a>
                         </div>
                     </div>
                 </div>
