--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
     <section class="bg-color">
         <div class="container max-w-1326 ">
-            <div class="row pt-26 align-items-end">
+            <div class="row pt-26 align-items-end pb-127">
                 <div class="col-6">
                     <div class="pb-10">
                         <!-- <img src="./assets/img/a87.gif" alt="" class="w-100 "> -->
@@ -64,6 +64,54 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="card duration-300 h-100 ">
+                        <div class="w-117"><img src="./assets/img/6.png" alt=""></div>
+                        <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">ART COLLECTION</h4>
+                        <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">Complete the art collection in full with +70 unique traits, and publish our rarity chart on our webpage.</h5>
+                    </div>                    
+                </div>
+                <div class="col-4">
+                    <div class="card duration-300 h-100">
+                        <div class="w-117"><img src="./assets/img/7.png" alt=""></div>
+                        <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">SPECIAL BULLIES</h4>
+                        <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">20 Buddybullies {out of 10k} will have a very special and ersonalized resembling of famous people who are into NFTs {those will be available after the minting}.</h5>
+                    </div>                    
+                </div>
+                <div class="col-4">
+                    <div class="card duration-300 h-100 ">
+                        <div class="w-117"><img src="./assets/img/8.png" alt=""></div>
+                        <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">BREEDING</h4>
+                        <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">Our BuddyBullies will not come alone, as we will announce the breeding function after the minting and you will be able to get a PuppyBully { for free}.</h5>
+                    </div>                    
+                </div>
+                <div class="col-4 pt-41">
+                    <div class="card duration-300 h-100">
+                        <div class="w-117"><img src="./assets/img/9.png" alt=""></div>
+                        <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">DIGITALMARKETS</h4>
+                        <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">Communicate with all the 
+                            digital markets available in the Solana NFT world  for getting our collection successfully listed.</h5>
+                    </div>                    
+                </div>
+                <div class="col-4 pt-41">
+                    <div class="card duration-300 h-100">
+                        <div class="w-117"><img src="./assets/img/10.png" alt=""></div>
+                        <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">MERCH</h4>
+                        <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">The team is working on the future merch thet will be available for the community members directly on our webpage.</h5>
+                    </div>                    
+                </div>
+                <div class="col-4 pt-41">
+                    <div class="card duration-300 h-100">
+                        <div class="w-117"><img src="./assets/img/11.png" alt=""></div>
+                        <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">CHARITY</h4>
+                        <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">We will be giving 30% of the 
+                            royalties to charity permanently 
+                            and we will keep spending on marketing, promotions and partnership.50% of the riyalties will go back to the community as rewards.</h5>
+                    </div>                    
+                </div>
+                
             </div>
 
         </div>
