--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="position-relative min-vh-100 bg-img d-none">
+    <section class="position-relative min-vh-100 bg-img ">
         <div class="container max-w-1326 ">
             <nav class="d-flex justify-content-between align-items-center pt-26">
                 <div class="logo">
@@ -34,22 +34,24 @@
                 </div>
             </nav>
 
-            <div class="max-w-547 pt-">
+            <div class="max-w-547 pt-261">
                 <h1 class="m-0 font-poppins fw-normal line-height-86 fs-6xl text-white">Vitae nunc,<sapn class="fw-bold"> blandit a odio</sapn></h1>
                 <h6 class="m-0 pt-27 font-poppins line-height-41 fw-medium fs-xl opacity-7 text-white pb-46">Semper in egestas risus id tempus. Pellentesque dolor eros sollicitudin feugiat ut odio semper. Mattis fermentum eget ut vestibulum dolor diam</h6>
                 <button class="font-poppins fw-medium fs-3xl line-height-37 color-blue bg-white btn-1 duration-300">Get Started</button>
             </div>
         </div>
     </section>
-    <section class="bg-color">
+    <section class="bg-color position-relative">
+        <img src="./assets/img/svg/Ellipse3.svg" alt="" class="position-absolute Ellipse3">
+        <img src="./assets/img/svg/Ellipse1.svg" alt="" class="position-absolute Ellipse1 ">
         <div class="container max-w-1326 ">
             <div class="row pt-26 align-items-end pb-127">
-                <div class="col-6">
+                <div class="col-6 z-1">
                     <div class="pb-10">
-                        <!-- <img src="./assets/img/a87.gif" alt="" class="w-100 "> -->
+                        <img src="./assets/img/a87.gif" alt="" class="w-100  z-1">
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 z-1">
                     <div class="">
                         <h2 class="m-0 font-poppins fw-semibold line-height-68 fs-5xl text-white">Mint Your Bat</h2>
                         <h4 class="m-0 font-poppins line-height-40 fs-4xl pt-5 text-white">Minting: 1,5 SOL</h4>
@@ -81,7 +83,7 @@
                     </div>                    
                 </div>
                 <div class="col-4">
-                    <div class="card duration-300 h-100 ">
+                    <div class="card duration-300 h-100 pb-78 ">
                         <div class="w-117"><img src="./assets/img/8.png" alt=""></div>
                         <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">BREEDING</h4>
                         <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">Our BuddyBullies will not come alone, as we will announce the breeding function after the minting and you will be able to get a PuppyBully { for free}.</h5>
@@ -103,7 +105,7 @@
                     </div>                    
                 </div>
                 <div class="col-4 pt-41">
-                    <div class="card duration-300 h-100">
+                    <div class="card duration-300 h-100 pb-34">
                         <div class="w-117"><img src="./assets/img/11.png" alt=""></div>
                         <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">CHARITY</h4>
                         <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">We will be giving 30% of the 
