--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <button class="font-poppins fw-medium fs-3xl line-height-37 color-blue bg-white btn-1 duration-300">Get Started</button>
             </div>
         </div>
+        <div class="bg-linear">
+
+        </div>
     </section>
     <section class="bg-color position-relative">
         <img src="./assets/img/svg/Ellipse3.svg" alt="" class="position-absolute Ellipse3">
