--- a/index.html
+++ b/index.html
@@ -121,6 +121,36 @@
 
         </div>
     </section>
+    <section class="bg-color">
+        <div class="container max-w-1326">
+            <div class="pt-131">
+                <h2 class="m-0 font-poppins fw-semibold line-height-68 fs-5xl text-center text-white">Roadmap</h2>
+            </div>
+            <div class="main-timeline-2 position-relative">              
+                <div class="timeline-2 right-2 pb-md-146 position-relative pb-5">
+                    <div class="timeline-card max-w-md-404 ">
+                        <h4 class="font-poppins text-white line-height-45 fs-4xl fw-semibold m-0">Q-4, 2021</h4>
+                        <h5 class="font-poppins m-0 line-height-29 fw-normal fs-md text-white pt-4 opacity-7">Blandit sed penatibus elit tortor fermentum velit donec. Id eleifend volutpat dolor netus auctor at. Volutpat sed auctor non in commodo, felis viverra risus tristique.</h5>                                               
+                    </div>
+                </div>
+                <div class="timeline-2 left-2 pb-md-212 d-md-flex justify-content-md-end position-relative pb-5">
+                    <div class="timeline-card max-w-md-404  text-md-end ">
+                        <h4 class="font-poppins text-white line-height-45 fs-4xl fw-semibold m-0">Q-1, 2021</h4>
+                        <h5 class="font-poppins m-0 line-height-29 fw-normal fs-md text-white pt-4 opacity-7">Blandit sed penatibus elit tortor fermentum velit donec. Id eleifend volutpat dolor netus auctor at. Volutpat sed auctor non in commodo, felis viverra risus tristique.</h5>                                               
+                    </div>
+                 
+                </div>
+                <div class="timeline-2 right-2 position-relative">
+                    <div class="timeline-card max-w-md-404 ">
+                        <h4 class="font-poppins text-white line-height-45 fs-4xl fw-semibold m-0">Q-2, 2021</h4>
+                        <h5 class="font-poppins m-0 line-height-29 fw-normal fs-md text-white pt-4 opacity-7">Blandit sed penatibus elit tortor fermentum velit donec. Id eleifend volutpat dolor netus auctor at. Volutpat sed auctor non in commodo, felis viverra risus tristique.</h5>                                               
+                    </div>
+                </div>
+               
+            </div>
+
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
