--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="pt-131">
                 <h2 class="m-0 font-poppins fw-semibold line-height-68 fs-5xl text-center text-white">Roadmap</h2>
             </div>
-            <div class="main-timeline-2 position-relative">              
+            <div class="main-timeline-2 position-relative mt-63">              
                 <div class="timeline-2 right-2 pb-md-146 position-relative pb-5">
                     <div class="timeline-card max-w-md-404 ">
                         <h4 class="font-poppins text-white line-height-45 fs-4xl fw-semibold m-0">Q-4, 2021</h4>
@@ -148,6 +148,14 @@
                 </div>
                
             </div>
+            <div class="pt-141 d-flex justify-content-center">
+                <h2 class="text-center m-0 text-white font-poppins line-height-45 fs-4xl fw-medium max-w-786">And this just the begining , the team is working on more suprises for our community. Buddybullies  stronger together !!</h2>
+            </div>
+
+        </div>
+    </section>
+    <section>
+        <div class="container max-w-1326">
 
         </div>
     </section>
