--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 </div>
                 <div class="menulist d-flex  align-content-center align-items-center  z-2">
                     <ul class="d-flex p-0 m-0 gap-81">
-                        <li><a href="#" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Minting</a></li>
-                        <li><a href="#" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Road Map</a></li>
-                        <li><a href="#" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Faq</a></li>
-                        <li><a href="#" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Team</a></li>
-                        <li><a href="#" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Join Us</a></li>                                                
+                        <li><a href="#minting" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Minting</a></li>
+                        <li><a href="#roadmap" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Road Map</a></li>
+                        <li><a href="#faq" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Faq</a></li>
+                        <li><a href="#team" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Team</a></li>
+                        <li><a href="#join" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Join Us</a></li>                                                
                     </ul>                    
                 </div>
                 <div class="hamburger cursor-pointer">
@@ -44,7 +44,7 @@
 
         </div>
     </section>
-    <section class="bg-color position-relative">
+    <section class="bg-color position-relative" id="minting">
         <img src="./assets/img/svg/Ellipse3.svg" alt="" class="position-absolute Ellipse3">
         <img src="./assets/img/svg/Ellipse1.svg" alt="" class="position-absolute Ellipse1 ">
         <div class="container max-w-1326 ">
@@ -121,7 +121,7 @@
 
         </div>
     </section>
-    <section class="bg-color">
+    <section class="bg-color" id="roadmap">
         <div class="container max-w-1326">
             <div class="pt-131">
                 <h2 class="m-0 font-poppins fw-semibold line-height-68 fs-5xl text-center text-white">Roadmap</h2>
@@ -154,7 +154,7 @@
 
         </div>
     </section>
-    <section class="bg-color">
+    <section class="bg-color" id="faq">
         <div class="container max-w-1326">
             <div class="pt-110">
                 <h2 class="m-0 font-poppins text-center text-white line-height-68 fw-semibold fs-5xl">FAQs</h2>
@@ -222,7 +222,7 @@
                   
                 </div>
             </div>
-            <div class="pt-121">
+            <div class="pt-121" id="team">
                 <h2 class="font-poppins m-0 text-center text-white line-height-68 fw-semibold fs-5xl ">Our Team</h2>
             </div>
             <div class="row max-w-1012 pt-26 mx-auto pb-42">
@@ -252,7 +252,7 @@
 
         </div>
     </section>
-    <footer class="bg-color footer-img">
+    <footer class="bg-color footer-img" id="join">
         <div class="container max-w-1326">
             <div class="pt-179">
                 <h2 class="m-0  font-poppins text-white text-center fw-semibold line-height-62 fs-5xl">JOIN US</h2>
