add underline in hover

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 </div>
                 <div class="menulist d-flex  align-content-center align-items-center  z-2">
                     <ul class="d-flex p-0 m-0 gap-81">
-                        <li><a href="#minting" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Minting</a></li>
-                        <li><a href="#roadmap" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Road Map</a></li>
-                        <li><a href="#faq" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Faq</a></li>
-                        <li><a href="#team" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Team</a></li>
-                        <li><a href="#join" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white">Join Us</a></li>                                                
+                        <li><a href="#minting" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white underline position-relative">Minting</a></li>
+                        <li><a href="#roadmap" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white underline position-relative">Road Map</a></li>
+                        <li><a href="#faq" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white underline position-relative">Faq</a></li>
+                        <li><a href="#team" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white underline position-relative">Team</a></li>
+                        <li><a href="#join" class="nav-link font-poppins fw-medium line-height-27 fs-lg text-white underline position-relative">Join Us</a></li>                                                
                     </ul>                    
                 </div>
                 <div class="hamburger cursor-pointer">
@@ -273,9 +273,9 @@
                 <div class="col-2">
                     <ul class="d-flex gap-6 flex-column p-0 m-0">
                         <li class="font-poppins fw-medium line-height-24 fs-md text-white">Resources</li>
-                        <li><a href="#" class="font-poppins text-white fw-normal line-height-19 fs-sm pt-1">Roadmap</a></li>
-                        <li><a href="#" class="font-poppins text-white fw-normal line-height-19 fs-sm ">FAQs</a></li>
-                        <li><a href="#" class="font-poppins text-white fw-normal line-height-19 fs-sm ">Mint your Bully</a></li>
+                        <li><a href="#roadmap" class="font-poppins text-white fw-normal line-height-19 fs-sm pt-1 underline position-relative">Roadmap</a></li>
+                        <li><a href="#faq " class="font-poppins text-white fw-normal line-height-19 fs-sm underline position-relative">FAQs</a></li>
+                        <li><a href="#minting" class="font-poppins text-white fw-normal line-height-19 fs-sm underline position-relative">Mint your Bully</a></li>
                     </ul>
                 </div>
                 <div class="col-2">
