--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Buddy Bullies</title>
-    <link rel="shortcut icon" href="./assets/img/6.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/6.png" type="image/x-icon">    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <section class="position-relative min-vh-100 bg-img ">
+    <section class="position-relative min-vh-100 bg-img d-none">
         <div class="container max-w-1326 ">
             <nav class="d-flex justify-content-between align-items-center pt-26">
                 <div class="logo">
