add media link hover

--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 
         </div>
     </section>
-    <section class="bg-color position-relative" id="minting">
+    <section class="bg-color position-relative overflow-hidden" id="minting">
         <img src="./assets/img/svg/Ellipse3.svg" alt="" class="position-absolute Ellipse3">
         <img src="./assets/img/svg/Ellipse1.svg" alt="" class="position-absolute Ellipse1 ">
         <div class="container max-w-1326 ">
             <div class="row pt-26 align-items-end pb-127">
-                <div class="col-6 z-1">
+                <div class="col-lg-6 col-12 z-1">
                     <div class="pb-10">
                         <img src="./assets/img/a87.gif" alt="" class="w-100  z-1">
                     </div>
                 </div>
-                <div class="col-6 z-1">
+                <div class="col-lg-6 col-12 z-1">
                     <div class="">
                         <h2 class="m-0 font-poppins fw-semibold line-height-68 fs-5xl text-white">Mint Your Bat</h2>
                         <h4 class="m-0 font-poppins line-height-40 fs-4xl pt-5 text-white">Minting: 1,5 SOL</h4>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row d-none">
                 <div class="col-4">
                     <div class="card duration-300 h-100 ">
                         <div class="w-117"><img src="./assets/img/6.png" alt=""></div>
@@ -121,7 +121,7 @@
 
         </div>
     </section>
-    <section class="bg-color" id="roadmap">
+    <section class="bg-color d-none" id="roadmap">
         <div class="container max-w-1326">
             <div class="pt-131">
                 <h2 class="m-0 font-poppins fw-semibold line-height-68 fs-5xl text-center text-white">Roadmap</h2>
@@ -154,7 +154,7 @@
 
         </div>
     </section>
-    <section class="bg-color" id="faq">
+    <section class="bg-color d-none" id="faq">
         <div class="container max-w-1326">
             <div class="pt-110">
                 <h2 class="m-0 font-poppins text-center text-white line-height-68 fw-semibold fs-5xl">FAQs</h2>
@@ -252,7 +252,7 @@
 
         </div>
     </section>
-    <footer class="bg-color footer-img" id="join">
+    <footer class="bg-color footer-img d-none" id="join">
         <div class="container max-w-1326">
             <div class="pt-179">
                 <h2 class="m-0  font-poppins text-white text-center fw-semibold line-height-62 fs-5xl">JOIN US</h2>
