add 2nd section responsive

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <img src="./assets/img/svg/Ellipse3.svg" alt="" class="position-absolute Ellipse3">
         <img src="./assets/img/svg/Ellipse1.svg" alt="" class="position-absolute Ellipse1 ">
         <div class="container max-w-1326 ">
-            <div class="row pt-26 align-items-end pb-127">
+            <div class="row pt-26 align-items-end pb-127 d-none">
                 <div class="col-lg-6 col-12 z-1">
                     <div class="pb-10">
                         <img src="./assets/img/a87.gif" alt="" class="w-100  z-1">
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 z-1">
+                <div class="col-lg-6 col-12 z-1 pt-4 pt-lg-0">
                     <div class="">
                         <h2 class="m-0 font-poppins fw-semibold line-height-68 fs-5xl text-white">Mint Your Bat</h2>
                         <h4 class="m-0 font-poppins line-height-40 fs-4xl pt-5 text-white">Minting: 1,5 SOL</h4>
