--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="position-relative min-vh-100 bg-img d-none">
+    <section class="position-relative min-vh-100 bg-img ">
         <div class="container max-w-1326 ">
             <nav class="d-flex justify-content-between align-items-center pt-26 ">
                 <div class="logo">
@@ -48,8 +48,8 @@
         </div>
     </section>
     <section class="bg-color position-relative overflow-hidden " id="minting">
-        <!-- <img src="./assets/img/svg/Ellipse3.svg" alt="Ellipse" class="position-absolute Ellipse3"> -->
-        <!-- <img src="./assets/img/svg/Ellipse1.svg" alt="Ellipse" class="position-absolute Ellipse1 "> -->
+        <img src="./assets/img/svg/Ellipse3.svg" alt="Ellipse" class="position-absolute Ellipse3">
+        <img src="./assets/img/svg/Ellipse1.svg" alt="Ellipse" class="position-absolute Ellipse1 ">
         <div class="container max-w-1326 ">
             <div class="row pt-26 align-items-end pb-lg-127 pb-sm-60 pb-5 ">
                 <div class="col-lg-6 col-12 z-1">
@@ -124,7 +124,8 @@
 
         </div>
     </section>
-    <section class="bg-color " id="roadmap">
+    <section class="bg-color position-relative " id="roadmap">
+        <img src="./assets/img/svg/Ellipse1.svg" alt="Ellipse" class="">
         <div class="container max-w-1326">
             <div class="pt-lg-131 pt-60">
                 <h2 class="m-0 font-poppins fw-semibold line-height-68 fs-5xl text-center text-white">Roadmap</h2>
@@ -157,7 +158,8 @@
 
         </div>
     </section>
-    <section class="bg-color " id="faq">
+    <section class="bg-color position-relative" id="faq">
+        <img src="./assets/img/svg/Ellipse2.svg" alt="Ellipse" class="position-absolute Ellipse2">
         <div class="container max-w-1326">
             <div class="pt-lg-110 pt-60">
                 <h2 class="m-0 font-poppins text-center text-white line-height-68 fw-semibold fs-5xl">FAQs</h2>
