--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             </div>
 
         </div>
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+        <button onclick="topFunction()" id="myBtn" title="Go to top" class="position-fixed">Top</button>
 
     </footer>                                   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
