--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 </head>
 
 <body>
-    <div class="loading-overlay d-none" id="loadingOverlay">
-        <div class="d-flex loader flex-column justify-content-center align-items-center">
-            <img src="" alt="">
-
-            <h2>s;fkasdjf;iojasd;of</h2>
+    <div class="loading-overlay " id="loadingOverlay">
+        <div class="d-flex loader flex-column justify-content-center align-items-center">            
+            <img src="./assets/img/a87.gif" alt="image" class="w-25  z-1">            
+            <h1 data-text="loading…" class="loader-text position-relative fs-6xl">loading…</h1>
 
         </div>
 
