change image folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Buddy Bullies</title>
-    <link rel="shortcut icon" href="./assets/img/6.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/png/6.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -29,7 +29,7 @@
 <body>
     <div class="loading-overlay " id="loadingOverlay">
         <div class="d-flex loader flex-column justify-content-center align-items-center">
-            <img src="./assets/img/a87.gif" alt="image" class="w-25  z-1">
+            <img src="./assets/images/gif/a87.gif" alt="image" class="w-25  z-1">
             <h1 data-text="loading…" class="loader-text position-relative fs-6xl">loading…</h1>
 
         </div>
@@ -87,16 +87,16 @@
     </header>
     <section class="bg-color position-relative overflow-hidden " id="minting">
         <div class="position-absolute Ellipse3">
-            <img src="./assets/img/svg/Ellipse3.svg" alt="Ellipse" class="w-100">
+            <img src="./assets/images/svg/Ellipse3.svg" alt="Ellipse" class="w-100">
         </div>
         <div class="position-absolute Ellipse1">
-            <img src="./assets/img/svg/Ellipse1.svg" alt="Ellipse" class=" w-100">
+            <img src="./assets/images/svg/Ellipse1.svg" alt="Ellipse" class=" w-100">
         </div>
         <div class="container max-w-1326 ">
             <div class="row pt-26 align-items-end pb-lg-127 pb-sm-60 pb-5 ">
                 <div class="col-lg-6 col-12 z-1">
                     <div class="pb-10">
-                        <img src="./assets/img/a87.gif" alt="image" class="w-100  z-1">
+                        <img src="./assets/images/gif/a87.gif" alt="image" class="w-100  z-1">
                     </div>
                 </div>
                 <div class="col-lg-6 col-12 z-1 pt-4 pt-lg-0 ">
@@ -115,11 +115,11 @@
                             soon</button>
                         <div class="gap-23 d-flex pt-lg-52 pt-4">
                             <a href="https://www.instagram.com/" target="_blank" class="media-link duration-300"><img
-                                    src="./assets/img/svg/instagram.svg" alt="media-icon"></a>
+                                    src="./assets/images/svg/instagram.svg" alt="media-icon"></a>
                             <a href="https://twitter.com/?lang=en" target="_blank" class="media-link duration-300"><img
-                                    src="./assets/img/svg/twitter.svg" alt="media-icon"></a>
+                                    src="./assets/images/svg/twitter.svg" alt="media-icon"></a>
                             <a href="https://discord.com/download" target="_blank" class="media-link duration-300"><img
-                                    src="./assets/img/svg/discord.svg" alt="media-icon"></a>
+                                    src="./assets/images/svg/discord.svg" alt="media-icon"></a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
             <div class="row pb-31">
                 <div class="col-lg-4 col-md-6 col-12 z-1">
                     <div class="card duration-300 h-100 pb-34">
-                        <div class="w-117"><img src="./assets/img/6.png" alt="card-img" class="duration-300"></div>
+                        <div class="w-117"><img src="./assets/images/png/6.png" alt="card-img" class="duration-300"></div>
                         <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">ART COLLECTION
                         </h4>
                         <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">Complete the art
@@ -136,7 +136,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 pt-41 pt-md-0 z-1">
                     <div class="card duration-300 h-100 pb-34">
-                        <div class="w-117 "><img src="./assets/img/7.png" alt="card-img" class="duration-300"></div>
+                        <div class="w-117 "><img src="./assets/images/png/7.png" alt="card-img" class="duration-300"></div>
                         <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">SPECIAL BULLIES
                         </h4>
                         <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">20 Buddybullies
@@ -146,7 +146,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 pt-41 pt-lg-0 z-1">
                     <div class="card duration-300 h-100 pb-lg-78 pb-34">
-                        <div class="w-117"><img src="./assets/img/8.png" alt="card-img" class="duration-300"></div>
+                        <div class="w-117"><img src="./assets/images/png/8.png" alt="card-img" class="duration-300"></div>
                         <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">BREEDING</h4>
                         <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">Our BuddyBullies
                             will not come alone, as we will announce the breeding function after the minting and you
@@ -155,7 +155,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12  pt-41 z-1">
                     <div class="card duration-300 h-100 pb-34">
-                        <div class="w-117"><img src="./assets/img/9.png" alt="card-img" class="duration-300"></div>
+                        <div class="w-117"><img src="./assets/images/png/9.png" alt="card-img" class="duration-300"></div>
                         <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">DIGITALMARKETS
                         </h4>
                         <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">Communicate with
@@ -166,7 +166,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12  pt-41 z-1">
                     <div class="card duration-300 h-100 pb-34">
-                        <div class="w-117"><img src="./assets/img/10.png" alt="card-img" class="duration-300"></div>
+                        <div class="w-117"><img src="./assets/images/png/10.png" alt="card-img" class="duration-300"></div>
                         <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">MERCH</h4>
                         <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">The team is
                             working on the future merch thet will be available for the community members directly on our
@@ -175,7 +175,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-12  pt-41 z-1">
                     <div class="card duration-300 h-100 pb-34">
-                        <div class="w-117"><img src="./assets/img/11.png" alt="card-img" class="duration-300"></div>
+                        <div class="w-117"><img src="./assets/images/png/11.png" alt="card-img" class="duration-300"></div>
                         <h4 class="m-0 font-poppins text-white line-height-30 fw-semibold fs-4xl pt-44 ">CHARITY</h4>
                         <h5 class="m-0 font-poppins text-white fw-normal line-height-24 fs-md pt-25 ">We will be giving
                             30% of the
@@ -191,7 +191,7 @@
     </section>
     <section class="bg-color position-relative overflow-hidden " id="roadmap">
         <div class="position-absolute Ellipse4">
-            <img src="./assets/img/svg/Ellipse4.svg" alt="Ellipse" class=" w-100">
+            <img src="./assets/images/svg/Ellipse4.svg" alt="Ellipse" class=" w-100">
         </div>
         <div class="container max-w-1326">
             <div class="pt-lg-100 pt-60">
@@ -235,7 +235,7 @@
     </section>
     <section class="bg-color position-relative " id="faq">
         <div class="position-absolute Ellipse2">
-            <img src="./assets/img/svg/Ellipse2.svg" alt="Ellipse" class=" w-100">
+            <img src="./assets/images/svg/Ellipse2.svg" alt="Ellipse" class=" w-100">
         </div>
         <div class="container max-w-1326">
             <div class="pt-lg-110 pt-60">
@@ -335,7 +335,7 @@
             <div class="row max-w-1012 pt-26 mx-auto pb-42">
                 <div class="col-lg-4 col-sm-6 col-12 z-1">
                     <div class="d-flex flex-column  align-items-center">
-                        <img src="./assets/img/first.png" alt="frame-img">
+                        <img src="./assets/images/png/first.png" alt="frame-img">
                         <h3 class="font-poppins line-height-40 fw-semibold fs-4xl m-0 text-white pt-32">Prime Bullister
                         </h3>
                         <h5 class="font-poppins text-white fw-normal line-height-24 m-0 fs-lg">Pruduct Designer</h5>
@@ -343,7 +343,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 col-12 pt-4 pt-sm-0 z-1">
                     <div class="d-flex flex-column  align-items-center">
-                        <img src="./assets/img/2nd.png" alt="frame-img">
+                        <img src="./assets/images/png/2nd.png" alt="frame-img">
                         <h3 class="font-poppins line-height-40 fw-semibold fs-4xl m-0 text-white pt-32">Solvador Bulli
                         </h3>
                         <h5 class="font-poppins text-white fw-normal line-height-24 m-0 fs-lg">Artist</h5>
@@ -351,7 +351,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 col-12 pt-4 pt-lg-0 z-1">
                     <div class="d-flex flex-column  align-items-center">
-                        <img src="./assets/img/3rd.png" alt="frame-img">
+                        <img src="./assets/images/png/3rd.png" alt="frame-img">
                         <h3 class="font-poppins line-height-40 fw-semibold fs-4xl m-0 text-white pt-32">Meta Bully</h3>
                         <h5 class="font-poppins text-white fw-normal line-height-24 m-0 fs-lg">Developer</h5>
                     </div>
@@ -401,11 +401,11 @@
                     <h6 class="font-poppins fw-medium line-height-24 fs-md text-white m-0">Community</h6>
                     <div class="gap-12 d-flex pt-21">
                         <a href="https://www.instagram.com/" target="_blank" class="media-link duration-300 "><img
-                                src="./assets/img/svg/instagram.svg" alt="media-icon" class="w-17"></a>
+                                src="./assets/images/svg/instagram.svg" alt="media-icon" class="w-17"></a>
                         <a href="https://twitter.com/?lang=en" target="_blank" class="media-link duration-300"><img
-                                src="./assets/img/svg/twitter.svg" alt="media-icon" class="w-17"></a>
+                                src="./assets/images/svg/twitter.svg" alt="media-icon" class="w-17"></a>
                         <a href="https://discord.com/download" target="_blank" class="media-link duration-300"><img
-                                src="./assets/img/svg/discord.svg" alt="media-icon" class="w-17"></a>
+                                src="./assets/images/svg/discord.svg" alt="media-icon" class="w-17"></a>
                     </div>
 
 
