change card shadow

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         </div>
     </header>
-    <section class="bg-color position-relative overflow-hidden " id="minting">
+    <section class="bg-color position-relative  " id="minting">
         <div class="position-absolute Ellipse3">
             <img src="./assets/images/svg/Ellipse3.svg" alt="Ellipse" class="w-100">
         </div>
@@ -94,13 +94,13 @@
         </div>
         <div class="container max-w-1326 ">
             <div class="row pt-26 align-items-end pb-lg-127 pb-sm-60 pb-5 ">
-                <div class="col-lg-6 col-12 z-1">
-                    <div class="pb-10">
+                <div class="col-lg-6 col-12 z-1 d-flex justify-content-lg-start justify-content-center">
+                    <div class="pb-10 max-w-574">
                         <img src="./assets/images/gif/a87.gif" alt="image" class="w-100  z-1">
                     </div>
                 </div>
-                <div class="col-lg-6 col-12 z-1 pt-4 pt-lg-0 ">
-                    <div class="">
+                <div class="col-lg-6 col-12 z-1 pt-4 pt-lg-0 d-flex justify-content-lg-center">
+                    <div class="d-flex flex-column align-items-start">
                         <h2 class="m-0 font-poppins fw-semibold line-height-68 fs-5xl text-white">Mint Your Bat</h2>
                         <h4 class="m-0 font-poppins line-height-40 fs-4xl pt-sm-5 pt-3 text-white">Minting: 1,5 SOL</h4>
                         <h5
@@ -189,7 +189,7 @@
 
         </div>
     </section>
-    <section class="bg-color position-relative overflow-hidden " id="roadmap">
+    <section class="bg-color position-relative  " id="roadmap">
         <div class="position-absolute Ellipse4">
             <img src="./assets/images/svg/Ellipse4.svg" alt="Ellipse" class=" w-100">
         </div>
@@ -361,7 +361,7 @@
 
         </div>
     </section>
-    <footer class="bg-color footer-img overflow-hidden" id="join">
+    <footer class="bg-color footer-img " id="join">
         <div class="container max-w-1326">
             <div class="pt-lg-179 pt-60">
                 <h2 class="m-0  font-poppins text-white text-center fw-semibold line-height-62 fs-5xl">JOIN US</h2>
