--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                                 data-bs-toggle="collapse" data-bs-target="#collapseOne">What’s the blockchain the
                                 buddybullies call home ?</button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse px-30" data-bs-parent="#myAccordion">
+                        <div id="collapseOne" class="accordion-collapse collapse pr-30 pl-30" data-bs-parent="#myAccordion">
 
                             <h6
                                 class="font-Montserrat line-height-19 fw-medium fs-md text-white opacity-7 m-0 bg-transparent acc-par">
@@ -271,7 +271,7 @@
                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo">What’s the blockchain the
                                 buddybullies call home ?</button>
                         </h2>
-                        <div id="collapseTwo" class="accordion-collapse collapse px-30" data-bs-parent="#myAccordion">
+                        <div id="collapseTwo" class="accordion-collapse collapse pr-30 pl-30" data-bs-parent="#myAccordion">
 
                             <h6
                                 class="font-Montserrat line-height-19 fw-medium fs-md text-white opacity-7 m-0 bg-transparent acc-par">
@@ -290,7 +290,7 @@
                                 data-bs-toggle="collapse" data-bs-target="#collapseThree">What’s the blockchain the
                                 buddybullies call home ?</button>
                         </h2>
-                        <div id="collapseThree" class="accordion-collapse collapse px-30" data-bs-parent="#myAccordion">
+                        <div id="collapseThree" class="accordion-collapse collapse pr-30 pl-30" data-bs-parent="#myAccordion">
                             <h6
                                 class="font-Montserrat line-height-19 fw-medium fs-md text-white opacity-7 m-0 bg-transparent acc-par">
                                 Hac varius turpis sit pulvinar lorem magna velit sit. Dapibus mattis adipiscing ornare
@@ -309,7 +309,7 @@
                                 data-bs-toggle="collapse" data-bs-target="#collapseFour">What’s the blockchain the
                                 buddybullies call home ?</button>
                         </h2>
-                        <div id="collapseFour" class="accordion-collapse collapse px-30" data-bs-parent="#myAccordion">
+                        <div id="collapseFour" class="accordion-collapse collapse pr-30 pl-30" data-bs-parent="#myAccordion">
 
                             <h6
                                 class="font-Montserrat line-height-19 fw-medium fs-md text-white opacity-7 m-0 bg-transparent acc-par pt-3">
