--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             </div>
 
         </div>
-        <button onclick="topFunction()" id="myBtn" title="Go to top" class="position-fixed">Top</button>
+        <button onclick="topFunction()" id="myBtn" title="Go to top" class="position-fixed fs-lg">Top</button>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
